--- a/css/partials/_icons.scss
+++ b/css/partials/_icons.scss
@@ -11,6 +11,13 @@ svg{
     right: -20%;
 
     filter:drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.3));
+
+    @include responsive(s){
+        width: 80px;
+        height: 80px;
+
+        top: 65%;
+    }
 }
 
 .icon-safe{
@@ -23,4 +30,10 @@ svg{
     right: 85%;
 
     filter:drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.3));
+
+    @include responsive(s){
+        width: 80px;
+        height: 80px;
+
+    }
 }
