--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -8,345 +8,350 @@ $container-s: 540px;
 
 // Mixin of media-queries
 @mixin responsive($device) {
-  @if $device == xl {
-    // For resolutions upper 1440px
-    @media screen and (min-width: $container-xl) {
-      @content;
-    }
-  } @else if $device == l {
-    // For resolutions between 1140px and 1440px
-    @media screen and (max-width: $container-xl) and (min-width: $container-l) {
-      @content;
-    }
-  } @else if $device == m {
-    // For resolutions between 960px and 1440px
-    @media screen and (max-width: $container-l) and (min-width: $container-s) {
-      @content;
-    }
-  } @else if $device == s {
-    // For resolutions less than 960px
-    @media screen and (max-width: $container-m) {
-      @content;
-    }
-  } @else if $device == xs {
-    // For resolutions less than 540px
-    @media screen and (max-width: $container-s) {
-      @content;
-    }
-  }
+	@if $device == xl {
+		// For resolutions upper 1440px
+		@media screen and (min-width: $container-xl) {
+			@content;
+		}
+	} @else if $device == l {
+		// For resolutions between 1140px and 1440px
+		@media screen and (max-width: $container-xl) and (min-width: $container-l) {
+			@content;
+		}
+	} @else if $device == m {
+		// For resolutions between 960px and 1440px
+		@media screen and (max-width: $container-l) and (min-width: $container-s) {
+			@content;
+		}
+	} @else if $device == s {
+		// For resolutions less than 960px
+		@media screen and (max-width: $container-m) {
+			@content;
+		}
+	} @else if $device == xs {
+		// For resolutions less than 540px
+		@media screen and (max-width: $container-s) {
+			@content;
+		}
+	}
 }
 
 .container {
-  max-width: $container-xl;
-  margin: 0 auto;
+	max-width: $container-xl;
+	margin: 0 auto;
 
-  padding: 96px 24px;
+	padding: 96px 24px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row;
+	overflow: hidden;
 
-  @include responsive(s) {
-    flex-direction: column;
+	@include responsive(s) {
+		flex-direction: column;
 
-    padding: 32px 18px;
-  }
+		padding: 32px 18px;
+	}
 }
 
 .flex-start {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;  
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .flex-column {
-  flex-direction: column;
+	flex-direction: column;
 }
 
-.justify-between{
-  justify-content: space-between;
+.justify-between {
+	justify-content: space-between;
 }
 
 .relative {
-  position: relative;
+	position: relative;
 }
 
 .flex-wrap {
-  flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 
 .flex-item-1 {
-  flex: 1 1 360px;
+	flex: 1 1 360px;
 }
 
 .flex-item-2 {
-  flex: 2 1 360px;
+	flex: 2 1 360px;
 }
 
 .flex-item-3 {
-  flex: 3 1 360px;
+	flex: 3 1 360px;
 }
 
 .flex-item-4 {
-  flex: 4 1 360px;
+	flex: 4 1 360px;
 }
 
 .flex-item-5 {
-  flex: 5 1 360px;
+	flex: 5 1 360px;
 }
 
 .flex-auto {
-  flex: 1 1 auto;
+	flex: 1 1 auto;
 }
 
 // Width'
 
 .width-auto {
-  width: auto;
+	width: auto;
 }
 .w-100 {
-  width: 100%;
+	width: 100%;
 }
 .w-75 {
-  width: 75%;
+	width: 75%;
 }
 .w-50 {
-  width: 50%;
+	width: 50%;
 }
 .w-25 {
-  width: 25%;
+	width: 25%;
 }
 
 .hidden {
-  overflow: hidden;
+	overflow: hidden;
 }
 
-.mobile-none{
-  @include responsive(s){
-    display: none;
-  }
+.mobile-none {
+	@include responsive(s) {
+		display: none;
+	}
 }
 
-.mobile-ok{
-  display: none;
-  @include responsive(s){
-    display: block;
-  }
+.mobile-ok {
+	display: none;
+	@include responsive(s) {
+		display: block;
+	}
 }
 
 .hero {
-  padding-top: 160px;
-  padding-bottom: 40px;
-  overflow: visible;
+	padding-top: 160px;
+	padding-bottom: 40px;
+	overflow: visible;
 
-  @include responsive(s) {
-    height: auto;
-  }
+	@include responsive(s) {
+		height: auto;
+	}
 }
 
-.hero__bet-score{
+.hero__bet-score {
+	h4 {
+		font-weight: 300;
+	}
 
-  h4{
-    font-weight: 300;
-  }
+	svg {
+		width: 28px;
+		height: 28px;
 
-  svg{
-    width: 28px;
-    height: 28px;
-    
-    filter:drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.1));
-  }
+		filter: drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.1));
+	}
 }
 
-.hero__bg-money{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
+.hero__bg-money {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
 
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  
-  z-index: -500;
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
 
+	z-index: -500;
 }
 
-.result{
+.result {
+	h3,
+	p {
+		text-align: center;
+	}
 
-  h3, p{
+	padding-top: 0px;
+}
+
+.best {
+	span {
+		background: $gradient-1;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-clip: text;
+	}
+
+	overflow: visible;
+
+	padding-top: 32px;
+	padding-bottom: 48px;
+}
+
+.best__bg-card {
+	width: 1216px;
+	height: 360px;
+
+	border-radius: 50px;
+
+	background-color: rgba(252, 255, 252, 0.7);
+
+	.best__icon-arrow {
+		position: absolute;
+
+		top: 0;
+	}
+
+	@include responsive(s) {
+		width: 360px;
+		height: 1040px;
+	}
+}
+
+.best__card {
+	width: 100%;
+
+	justify-content: space-around;
+
+	z-index: 10;
+
+	p {
+		font-weight: bold;
+	}
+
+	@include responsive(s) {
+		flex-direction: column;
+
+		gap: 80px;
+
+		h5,
+		h3 {
+			text-align: center;
+		}
+	}
+}
+
+.best__reason {
+	gap: 72px;
+
+	@include responsive(s) {
+		flex-direction: column;
+
+		gap: 48px;
+	}
+
+	svg {
+		filter: drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.3));
+		transition: 0.5s ease;
+
+		cursor: pointer;
+
+		&:hover {
+			transform: scale(1.05);
+		}
+	}
+}
+
+.reason {
+	span {
+		background: $gradient-1;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-clip: text;
+	}
+
+	gap: 184px;
+	align-items: flex-start;
+
+	@include responsive(s) {
+		align-items: center;
+		gap: 0px;
+	}
+}
+
+.reason__list {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+
+	svg {
+		width: 45px;
+		height: 45px;
+
+		filter: drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.3));
+	}
+
+	p {
+		font-size: 24px;
+		line-height: 140%;
+
+		@include responsive(s) {
+			font-size: 18px;
+		}
+	}
+
+	text-align: left;
+}
+
+.action {
+	p {
+		text-align: center;
+	}
+}
+
+footer {
+	background-color: $primary-normal;
+}
+
+.footer {
+	justify-content: space-between;
+
+	padding-top: 24px;
+	padding-bottom: 24px;
+
+  @include responsive(s){
     text-align: center;
-  }
-
-  padding-top: 0px;
-
-}
-
-.best{
-  span{
-    background: $gradient-1;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-  }
-
-  overflow: visible;
-
-  padding-top: 32px;
-  padding-bottom: 48px;
-}
-
-.best__bg-card{
-
-  width: 1216px;
-  height: 360px;
-
-  border-radius: 50px;
-
-  background-color: rgba(252, 255, 252, 0.7);
-
-  .best__icon-arrow{
-    position: absolute;
-
-    top: 0;
-  }
-
-  @include responsive(s){
-    width: 360px;
-    height: 1040px;
-  }
-}
-
-.best__card{
-
-  width: 100%;
-
-  justify-content: space-around;
-
-  z-index: 10;
-
-  p{
-    font-weight: bold;
-  }
-
-  @include responsive(s){
-    flex-direction: column;
-
-    gap: 80px;
-
-    h5, h3{
-      text-align: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    svg{
+      width: 60%;
     }
   }
-
 }
 
-.best__reason{
-  gap: 72px;
+.contribution-container {
+	background-color: $black-light;
+}
 
-  @include responsive(s){
-    flex-direction: column;
+.contribution {
+	justify-content: space-between;
 
-    gap: 48px;
-  }
+	a,
+	p {
+		color: $white-dark;
+	}
 
-  svg{
-    filter:drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.3));
-    transition: 0.5s ease;
+	p {
+		font-weight: 300;
+	}
 
-    cursor: pointer;
-
-    &:hover {
-
-        transform: scale(1.05);
+	a {
+		font-weight: 400;
+    @include responsive(s){
+      font-size: 16px;
     }
-  }
-
-}
-
-.reason{
-  span{
-    background: $gradient-1;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-  }
-
-  gap: 184px;
-  align-items: flex-start;
-}
-
-.reason__list{
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  svg{
-    width: 45px;
-    height: 45px;
-
-    filter:drop-shadow(0px 51px 80px rgba(60, 196, 29, 0.3));
-  }
-
-  p{
-    font-size: 24px;
-    line-height: 140%;
-  }
-
-  text-align: left;
-}
-
-.reason_cell{
-  width: 328px;
-  
-}
-
-.action{
-  p{
-    text-align: center;
-  }
-
-}
-
-footer{
-  background-color: $primary-normal;
-
-  
-}
-
-.footer{
-  justify-content: space-between;
-
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.contribution-container{
-  background-color: $black-light;
-}
-
-.contribution{
-
-  justify-content: space-between;
-
-  a,p{
-    color: $white-dark;
-  }
-
-  p{
-    font-weight: 300;
-  }
-
-  a{
-    font-weight: 400;
-  }
+	}
 }
