--- a/css/partials/_swiper.scss
+++ b/css/partials/_swiper.scss
@@ -22,6 +22,10 @@
   flex-direction: row;
 
   position: relative;
+
+  @include responsive(s){
+    padding: 96px 56px 96px 24px;
+  }
 }
 
 .button-next {
@@ -70,6 +74,7 @@
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
+
 }
 
 .photo-profile {
@@ -80,26 +85,6 @@
   background-size: cover;
 }
 
-.photo-1 {
-  background-image: url("../../svg/icon-user.svg");
-}
-
-.photo-2 {
-  background-image: url("../../svg/icon-user.svg");
-}
-
-.photo-3 {
-  background-image: url("../../svg/icon-user.svg");
-}
-
-.photo-4 {
-  background-image: url("../../svg/icon-user.svg");
-}
-
-.photo-5 {
-  background-image: url("../../svg/icon-user.svg");
-}
-
-.photo-6 {
+.photo {
   background-image: url("../../svg/icon-user.svg");
 }
